(0.2.1) minorpatch: Updating git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@ BuildingEscape/Content/StarterContent/
 ##########################
 # VS Generated Files #
 ##########################
-*.VC.db
-*.VC.opendb
+*.VC.db*
+*.VC.opendb*
+*.ipch*
